@@ -79,16 +79,16 @@
         <lib.bcrypt.version>0.4</lib.bcrypt.version>
         <lib.caffeine.version>3.2.0</lib.caffeine.version>
         <lib.commons.collections4.version>4.4</lib.commons.collections4.version>
-        <lib.commons.io.version>2.18.0</lib.commons.io.version>
+        <lib.commons.io.version>2.19.0</lib.commons.io.version>
         <lib.commons.lang3.version>3.17.0</lib.commons.lang3.version>
-        <lib.datanucleus-api-jdo.version>6.0.4</lib.datanucleus-api-jdo.version>
+        <lib.datanucleus-api-jdo.version>6.0.5</lib.datanucleus-api-jdo.version>
         <lib.datanucleus.version>6.0.10</lib.datanucleus.version>
-        <lib.datanucleus-rdbms.version>6.0.9</lib.datanucleus-rdbms.version>
+        <lib.datanucleus-rdbms.version>6.0.10</lib.datanucleus-rdbms.version>
         <lib.h2.version>2.3.232</lib.h2.version>
         <lib.hikaricp.version>6.3.0</lib.hikaricp.version>
         <lib.javassist.version>3.30.2-GA</lib.javassist.version>
-        <lib.jackson.version>2.18.3</lib.jackson.version>
-        <lib.jackson-databind.version>2.18.3</lib.jackson-databind.version>
+        <lib.jackson.version>2.19.0</lib.jackson.version>
+        <lib.jackson-databind.version>2.19.0</lib.jackson-databind.version>
         <lib.jakarta-json-api.version>2.1.3</lib.jakarta-json-api.version>
         <lib.jakarta-mail-api.version>2.1.3</lib.jakarta-mail-api.version>
         <lib.jakarta-servlet-api.version>6.1.0</lib.jakarta-servlet-api.version>
@@ -100,15 +100,15 @@
         <lib.jsonwebtoken.version>0.12.6</lib.jsonwebtoken.version>
         <lib.jsr305.version>3.0.2</lib.jsr305.version>
         <lib.logback.version>1.5.18</lib.logback.version>
-        <lib.logstash-logback-encoder.version>8.0</lib.logstash-logback-encoder.version>
-        <lib.micrometer.version>1.14.5</lib.micrometer.version>
+        <lib.logstash-logback-encoder.version>8.1</lib.logstash-logback-encoder.version>
+        <lib.micrometer.version>1.14.6</lib.micrometer.version>
         <lib.microprofile-health-api.version>4.0.1</lib.microprofile-health-api.version>
         <lib.nimbus-oauth2-oidc-sdk.version>11.23.1</lib.nimbus-oauth2-oidc-sdk.version>
         <lib.owasp.encoder.version>1.3.1</lib.owasp.encoder.version>
         <lib.owasp.security-logging.version>1.1.7</lib.owasp.security-logging.version>
         <lib.parsson.version>1.1.7</lib.parsson.version>
         <lib.slf4j.version>2.0.17</lib.slf4j.version>
-        <lib.swagger.version>2.2.29</lib.swagger.version>
+        <lib.swagger.version>2.2.30</lib.swagger.version>
         <!-- Unit test libraries -->
         <lib.junit-jupiter.version>5.11.4</lib.junit-jupiter.version>
         <lib.junit-pioneer.version>2.3.0</lib.junit-pioneer.version>
@@ -314,6 +314,11 @@
                 <version>${lib.slf4j.version}</version>
             </dependency>
             <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-nop</artifactId>
+                <version>${lib.slf4j.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>ch.qos.logback</groupId>
                 <artifactId>logback-classic</artifactId>
                 <version>${lib.logback.version}</version>
@@ -438,6 +443,16 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
+                    <argLine>
+                        @{argLine}
+                        -Xmx256m
+                        -XX:-TieredCompilation
+                        -XX:TieredStopAtLevel=1
+                        -javaagent:${settings.localRepository}/org/mockito/mockito-core/${lib.mockito.version}/mockito-core-${lib.mockito.version}.jar
+                        -Xshare:off
+                        --add-opens java.base/java.util=ALL-UNNAMED
+                        --add-opens java.base/java.lang=ALL-UNNAMED
+                    </argLine>
                     <!-- Some Alpine tests leave the JVM behind in a dirty state. -->
                     <reuseForks>false</reuseForks>
                 </configuration>
